# b3finance

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
templates/: index.html
