[project]
name = "finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "yfinance>=1.2.2",
]

[dependency-groups]
dev = [
    "ignr>=2.3",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 79
exclude = ["**/templates/**"]
extend-exclude = ["*.html", "*.css", "*.js"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = "."
